# eval-hack

./: .gitignore  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
madhacks/: README.md  pyproject.toml
madhacks/data/: project_numbers.csv  rank.csv
madhacks/src/madhacks/: pl.py
src/devpost/: __main__.py  cli.py  enrich.py  export.py  finalize.py  judge.py  madhacks_eval.py  pairs.py  prompts.py  rank.py  stats.py  summary.py
