[project]
name = "devpost-hacks"
version = "0.1.0"
description = "Can LLMs judge hackathons?"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.12",
    "pyarrow>=17",
    "openai>=1.50",
    "choix>=0.3.5",
    "datasets>=4.8.5",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/twangodev/devpost-hacks"
"HF Collection" = "https://huggingface.co/collections/twangodev/devpost-hacks"

[project.scripts]
devpost = "devpost.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devpost"]

[tool.uv.workspace]
members = ["madhacks"]

[dependency-groups]
dev = [
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.12.0",
    "ruff>=0.15.12",
]
