[project]
name = "madhacks"
version = "0.1.0"
description = "Ranked-choice aggregation for hackathon judging."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pymc>=5.28.5",
]

[project.scripts]
madhacks = "madhacks.pl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/madhacks"]
